chore: moving things to v1

--- a/src/v1/index.html
+++ b/src/v1/index.html
@@ -11,7 +11,7 @@
     <script src="./nomie-plugin.js"></script>
 
     <div class="list space-x-4">
-      <a class="btn w-full px-2 py-1 rounded-md" href="v1/plugins/weather.html">
+      <a class="btn w-full px-2 py-1 rounded-md" href="v1/plugins/weather">
         Weather Plugin
       </a>
     </div>
