--- a/src/v1/plugins/weather/index.html
+++ b/src/v1/plugins/weather/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nomie Weather Plugin</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="/v1/nomie-plugin.js"></script>
+    <script src="../../nomie-plugin.js"></script>
     
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
   </head>
@@ -40,6 +40,6 @@
       </button>
     </div>
 
-    <script src="/plugins/weather/weather.js"></script>
+    <script src="/v1/plugins/weather/weather.js"></script>
   </body>
 </html>
