--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nomie Plugin Repo</title>
+  <title>Nomie Plugin Repo - Redirecting...</title>
   <script>
     window.location.href = '/v1';
   </script>
 </head>
 <body>
-  <a href="/v1">V1</a>
+  <a href="/v1">Continue</a>
 </body>
 </html>
