--- a/src/v1/index.html
+++ b/src/v1/index.html
@@ -4,16 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Nomie Plugins</title>
+    <link rel="stylesheet" href="../styles/markdown.css" />
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
     
     <script src="./nomie-plugin.js"></script>
 
-    <div class="list space-x-4">
-      <a class="btn w-full px-2 py-1 rounded-md" href="v1/plugins/weather">
-        Weather Plugin
-      </a>
+    <header class="flex sticky bg-white shadow-md top-0 left-0 right-0 items-center h-12 px-4 space-x-2">
+      <a class="font-bold whitespace-pre" href="/v1">Nomie Plugin Docs</a>
+      <div class="w-full min-w-0 flex-grow flex-shrink"></div>
+      <div class="flex items-center space-x-2">
+        <a class="text-blue-500 whitespace-nowrap underline block" href="https://nomie.app">Nomie.app →</a>
+      </div>
+    </header>
+    <div class="px-4 py-4 md:p-10 lg:p-20">
+      <div class="markdown-body max-w-screen-md mx-auto">
+        {content}
+      </div>
     </div>
 
   </body>
