feat: adding memories plugin

--- a/src/v1/plugins/weather/index.html
+++ b/src/v1/plugins/weather/index.html
@@ -9,7 +9,7 @@
     <script src="/v1/nomie-plugin.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
   </head>
-  <body class="bg-white dark:bg-gray-800">
+  <body class="bg-white dark:bg-black">
     <div id="content" class="h-screen">
       <div
         class="text-gray-500 w-full h-screen flex items-center justify-center"
