--- a/src/v1/plugins/tester/index.html
+++ b/src/v1/plugins/tester/index.html
@@ -23,6 +23,12 @@
           Open URL
         </button>
         <button
+          @click="confirmTest()"
+          class="w-full bg-blue-500  text-white py-2 px-4 rounded-md"
+        >
+          Confirm Test
+        </button>
+        <button
           @click="selectTrackableAndValue()"
           class="w-full bg-blue-500  text-white py-2 px-4 rounded-md"
         >
