bug: #2 plugin.selectTrackables is not giving a single option

--- a/src/v1/plugins/tester/index.html
+++ b/src/v1/plugins/tester/index.html
@@ -18,37 +18,41 @@
       <div class="grid grid-cols-2 gap-4 flex-grow-0 ">
         <button
           @click="openURL()"
-          class="w-full bg-blue-500  text-white py-2 px-4 rounded-md"
+          class="w-full bg-pink-500  text-white py-2 px-4 rounded-md"
         >
           Open URL
         </button>
         <button
           @click="confirmTest()"
-          class="w-full bg-blue-500  text-white py-2 px-4 rounded-md"
+          class="w-full bg-pink-500  text-white py-2 px-4 rounded-md"
         >
           Confirm Test
         </button>
         <button
           @click="selectTrackableAndValue()"
-          class="w-full bg-blue-500  text-white py-2 px-4 rounded-md"
+          class="w-full bg-pink-500  text-white py-2 px-4 rounded-md"
         >
           Select Tracker
         </button>
+        <button @click="selectTrackables()"
+        class="w-full bg-pink-500  text-white py-2 px-4 rounded-md">
+          Select Trackables
+        </button>
         <button
         @click="createNote()"
-        class="w-full bg-blue-500  text-white py-2 px-4 rounded-md"
+        class="w-full bg-pink-500  text-white py-2 px-4 rounded-md"
       >
         Create Note
       </button>
       <button
         @click="searchNotes()"
-        class="w-full bg-blue-500  text-white py-2 px-4 rounded-md"
+        class="w-full bg-pink-500  text-white py-2 px-4 rounded-md"
       >
         Search Notes
       </button>
       <button
         @click="openTemplate()"
-        class="w-full bg-blue-500  text-white py-2 px-4 rounded-md"
+        class="w-full bg-pink-500  text-white py-2 px-4 rounded-md"
       >
         Open Template
       </button>
