--- a/src/v1/plugins/meditate/index.html
+++ b/src/v1/plugins/meditate/index.html
@@ -153,6 +153,23 @@
           </span>
         </button>
       </section>
+
+      <section class="pb-4" v-if="!activeVideo">
+        <button
+          v-if="!trackable"
+          class="w-full py-2 text-sm px-4 underline text-white"
+          @click="installTrackable()"
+        >
+          Install Meditation Tracker
+        </button>
+        <button
+          @click="installTrackable()"
+          v-else
+          class="w-full text-xs py-2 px-4 text-white"
+        >
+          Meditation Tracker Installed!
+        </button>
+      </section>
     </div>
     <script src="/v1/plugins/meditate/meditate.js"></script>
     <!-- 100% privacy friendly analytics -->
