chore: my-people and nui work

--- a/src/v1/wip/nui/nui.html
+++ b/src/v1/wip/nui/nui.html
@@ -77,6 +77,19 @@
               placeholder="Their Birthday"
             />
           </fieldset>
+          <fieldset class="nui-fieldset inline">
+            <label for="birthday">Select</label>
+            <select
+              name="frequency"
+              class="nui-input"
+              placeholder="Their Birthday"
+            >
+              <option>1 Week</option>
+              <option>2 Week</option>
+              <option>3 Week</option>
+              <option>4 Week</option>
+            </select>
+          </fieldset>
           <fieldset class="nui-fieldset">
             <div class="nui-hbar space-x-2">
               <label class="nui-switch">
