--- a/src/v1/plugins/my-people/index.html
+++ b/src/v1/plugins/my-people/index.html
@@ -13,20 +13,24 @@
   <body class="nui-bg-100">
     <div id="app">
       <div class="nui-backdrop" v-if="activePerson">
-        <div class="nui-modal flex flex-col justify-items-stretch">
+        <div
+          id="active-modal"
+          class="nui-modal fullscreen flex flex-col justify-items-stretch"
+        >
           <header class="mt-2 nui-stiff py-2 shadow-md">
             <div class="nui-toolbar space-x-4">
-              <img
-                :src="activePerson.avatar"
-                v-if="activePerson.avatar"
-                class="w-12 h-12 rounded-full overflow-hidden"
-              />
+              <avatar
+                :avatar="activePerson.avatar"
+                :name="activePerson.name"
+                size="50"
+              ></avatar>
               <main>
-                <h2 class="nui-text-2xl nui-title solid">
-                  {{activePerson.username}}
-
-                  <p class="nui-description">{{activePerson.displayName}}</p>
+                <h2 class="nui-text-4xl nui-title solid">
+                  {{activePerson.name}}
                 </h2>
+                <p class="nui-text-700 text-sm" v-if="activePerson.birthday">
+                  {{activePerson.age}} years old
+                </p>
               </main>
             </div>
             <div class="nui-toolbar">
@@ -55,104 +59,113 @@
 
           <!-- Active User INfo View-->
           <main
-            class="nui-filler p-2 overflow-y-auto"
+            class="nui-filler p-4 overflow-y-auto"
             v-if="activePersonView == 'info'"
           >
             <ul class="nui-card mb-4">
               <div v-if="activePerson.birthday">
-                <li class="nui-item text-sm">
-                  <main class="nui-filler">
-                    <h1 class="nui-title mb-1 text-base">
-                      {{activePerson.age}} yrs old
-                    </h1>
-                    <div class="nui-hbar space-x-2">
-                      <span
-                        class="text-green-500"
-                        v-if="activePerson.isBirthday"
-                      >
-                        🎁 Birthday is Today!
-                      </span>
-                      <span v-else class="font-normal nui-text-600"
-                        >Birthday in {{activePerson.birthdayFromNow}} days
-                      </span>
-                      <h1 class="nui-title text-sm">
-                        {{activePerson.birthdayFormatted}}
-                      </h1>
-                    </div>
-                  </main>
+                <li class="nui-item text-sm justify-between">
+                  <h2 class="text-green-500" v-if="activePerson.isBirthday">
+                    🎁 Birthday is Today!
+                  </h2>
+                  <h2 v-else class="font-normal nui-text-600">
+                    Birthday in {{activePerson.birthdayFromNow}} days
+                  </h2>
+                  <h3 class="nui-title text-sm">
+                    {{activePerson.birthdayFormatted}}
+                  </h3>
                 </li>
                 <hr class="nui-divider" />
               </div>
-              <div v-else>
-                <button class="nui-item" @click="editPerson(activePerson)">
-                  <h2 class="nui-title primary">Add a Birthday</h2>
-                </button>
-                <hr class="nui-divider" />
-              </div>
 
-              <li class="nui-item text-sm">
-                <main class="nui-filler">
-                  <div class="nui-hbar">
-                    <span
-                      v-if="activePerson.latest"
-                      class="font-normal nui-text-600"
-                      >Last Interaction
-                      <strong class="nui-text-inverse"
-                        >{{dayjs(activePerson.latest).fromNow()}}</strong
-                      >
-                    </span>
-                  </div>
-                  <h1 class="nui-title" v-else>No recent interactions</h1>
-                </main>
+              <li class="nui-item text-sm justify-between">
+                <span
+                  v-if="activePerson.latest"
+                  class="font-normal nui-text-600"
+                  >Last Interaction
+                </span>
+                <h1 class="nui-title text-sm" v-else>No recent interactions</h1>
+                <h3 class="nui-title text-sm" v-if="activePerson.latest">
+                  {{dayjs(activePerson.latest).fromNow()}}
+                </h3>
               </li>
             </ul>
 
-            <div class="my-4 nui-card" v-if="!activePerson.phone">
-              <button class="nui-item" @click="editPerson(activePerson)">
-                <h2 class="nui-title primary">Add Contact Info</h2>
-              </button>
-              <hr class="nui-divider" />
+            <div id="user-actions" class="nui-card mt-2">
+              <div v-if="!activePerson.birthday">
+                <button
+                  class="nui-item nui-text-inverse"
+                  @click="editPerson(activePerson)"
+                >
+                  <span class="text-2xl">🎁</span>
+                  <span>Add Birthday</span>
+                </button>
+                <hr class="nui-divider" />
+              </div>
+              <div id="phone-contacts" v-if="activePerson.phone">
+                <a
+                  class="nui-item space-x-4"
+                  :href="`tel://${activePerson.phone}`"
+                >
+                  <span class="text-2xl">📱</span>
+                  <h2>Call {{activePerson.phone}}</h2>
+                </a>
+                <hr class="nui-divider" />
+                <a
+                  class="nui-item space-x-4"
+                  :href="`sms://${activePerson.phone}`"
+                >
+                  <span class="text-2xl">💬</span>
+                  <h2>Message</h2>
+                </a>
+                <hr class="nui-divider" />
+              </div>
+
+              <div id="user-email">
+                <a
+                  :href="`mailto:${activePerson.email}`"
+                  class="nui-item space-x-4"
+                  v-if="activePerson.email"
+                >
+                  <span class="text-2xl">📧</span>
+                  <span>Send an Email</span>
+                </a>
+                <button
+                  v-else
+                  class="nui-item nui-text-inverse"
+                  @click="editPerson(activePerson)"
+                >
+                  <span class="text-2xl">📧</span>
+                  <span>Add Email</span>
+                </button>
+              </div>
             </div>
 
-            <div class="nui-card mt-2">
-              <a
-                class="nui-item space-x-4"
-                :href="`tel://${activePerson.number}`"
-                v-if="activePerson.phone"
+            <section class="nui-card mt-4 p-4" v-if="activePerson.notes">
+              <h2 class="nui-title">About</h2>
+              <p class="text-sm nui-text-700 leading-tight">
+                {{activePerson.notes}}
+              </p>
+            </section>
+
+            <section class="nui-card mt-4">
+              <button
+                class="nui-item nui-text-inverse space-x-4"
+                @click="editPerson(activePerson)"
               >
-                <span class="text-2xl">📱</span>
-                <h2 class="nui-title solid">Call {{activePerson.phone}}</h2>
-              </a>
-              <hr class="nui-divider" />
-              <a
-                class="nui-item space-x-4"
-                :href="`sms://${activePerson.phone}`"
-                v-if="activePerson.phone"
-              >
-                <span class="text-2xl">💬</span>
-                <h2 class="nui-title solid">Message</h2>
-              </a>
-              <hr class="nui-divider" />
-              <a
-                :href="`mailto:${activePerson.email}`"
-                class="nui-item space-x-4"
-                v-if="activePerson.email"
-              >
-                <span class="text-2xl">📧</span>
-                <h2 class="nui-title solid">
-                  Email {{activePerson.displayName || activePerson.username}}
-                </h2>
-              </a>
-            </div>
+                <span class="text-2xl">📇</span>
+                <span>Edit {{activePerson.name}}'s Info</span>
+              </button>
+            </section>
           </main>
 
           <main
             id="active-user-checkin"
-            class="nui-filler p-2 overflow-y-auto"
+            class="nui-filler p-4 overflow-y-auto"
             v-else-if="activePersonView == 'check-in'"
           >
             <div class="nui-card p-2">
-              <div class="flex flex-wrap py-1">
+              <div class="flex flex-wrap pt-1 pb-2">
                 <button
                   v-for="button in checkinOptions"
                   class="m-px nui-button xs nui-bg-200 nui-text-800"
@@ -189,7 +202,7 @@
 
           <main
             id="active-user-notes"
-            class="nui-filler p-2 overflow-y-auto"
+            class="nui-filler p-4 overflow-y-auto"
             v-else-if="activePersonView == 'notes'"
           >
             <div class="nui-card">
@@ -197,44 +210,39 @@
                 v-if="!activePersonNotes.length"
                 class="nui-item nui-text-900 nui-divider"
               >
-                <h2 class="nui-title w-full text-center py-2">
+                <h2 class="nui-title font-semibold w-full text-center py-2">
                   No recent notes
                 </h2>
               </div>
-              <div
-                v-for="note in activePersonNotes"
-                class="nui-item nui-text-900 nui-divider"
-              >
-                <main>
-                  <p class="text-xs space-x-2">
-                    <span class="nui-text-700">
-                      {{dayjs(note.end).format('ddd Do MMM YYYY')}}
-                    </span>
-                    <span class="nui-text-500">
-                      {{dayjs(note.end).fromNow()}}
-                    </span>
-                    <span v-if="note.lat" class="text-green-500"
-                      >{{note.location}}</span
-                    >
-                  </p>
-                  <p class="mt-2">{{note.note}}</p>
-                </main>
-              </div>
             </div>
+
+            <article
+              v-for="note in activePersonNotes"
+              class="nui-card mb-4 p-4"
+            >
+              <p class="text-xs space-x-2">
+                <span class="nui-text-700">
+                  {{dayjs(note.end).format('ddd Do MMM YYYY')}}
+                </span>
+                <span class="nui-text-500">
+                  {{dayjs(note.end).fromNow()}}
+                </span>
+                <span v-if="note.lat" class="text-green-500"
+                  >{{note.location}}</span
+                >
+              </p>
+              <p class="mt-2">{{note.note}}</p>
+            </article>
           </main>
 
-          <footer class="nui-stiff -mx-2 nui-toolbar space-x-4 justify-between">
-            <button
-              @click="editPerson(activePerson); activePerson = undefined"
-              class="nui-button text-gray-500"
-            >
-              Edit
-            </button>
+          <footer
+            class="nui-stiff px-4 pt-4 pb-2 nui-toolbar space-x-4 justify-between"
+          >
             <button
               @click="activePerson = undefined"
-              class="nui-button primary text"
+              class="py-3 nui-button rounded-xl nui-stiff w-full lg text-lg bg-red-500 text-white solid"
             >
-              Close
+              Cancel
             </button>
           </footer>
         </div>
@@ -242,14 +250,13 @@
 
       <div class="nui-backdrop" v-if="editingPerson">
         <div class="nui-modal flex flex-col justify-items-stretch">
-          <header class="nui-stiff nui-toolbar space-x-4">
+          <header class="nui-stiff nui-toolbar space-x-4 shadow-md">
             <img
               :src="editingPerson.avatar"
               v-if="editingPerson.avatar"
               class="w-4 h-4 rounded-full overflow-hidden"
             />
-            <h2 class="nui-title solid">{{editingPerson.username}}</h2>
-            <p class="nui-description">{{editingPerson.displayName}}</p>
+            <h2>{{editingPerson.name}}</h2>
           </header>
           <div class="flex flex-col space-y-2 p-4 nui-filler overflow-y-auto">
             <fieldset class="nui-fieldset inline">
@@ -263,18 +270,18 @@
             </fieldset>
 
             <fieldset class="nui-fieldset inline">
-              <label>Stay in touch every</label>
+              <label>Stay in touch</label>
               <select
                 class="nui-input"
                 type="text"
                 v-model="editingPerson.maxNoContactDays"
               >
-                <option value="1">1 Day</option>
-                <option value="2">2 Days</option>
-                <option value="7">Week</option>
-                <option value="14">Couple Weeks</option>
-                <option value="30">Monthly</option>
-                <option value="60">Couple Months</option>
+                <option value="1">Every 1 Day</option>
+                <option value="2">Every 2 Days</option>
+                <option value="7">Each Week</option>
+                <option value="14">Every Couple Weeks</option>
+                <option value="30">Once a Month</option>
+                <option value="60">Every Couple months</option>
                 <option value="90">Quarterly</option>
               </select>
             </fieldset>
@@ -308,24 +315,38 @@
               />
             </fieldset>
 
-            <fieldset class="nui-text-solid py-2 flex items-center space-x-4">
+            <fieldset class="nui-fieldset">
+              <label>Notes</label>
+              <textarea
+                class="nui-input"
+                rows="3"
+                :placeholder="`Notes about ${editingPerson.name}`"
+                v-model="editingPerson.notes"
+              ></textarea>
+            </fieldset>
+
+            <hr class="nui-divider my-2" />
+            <fieldset class="nui-text-solid flex items-center space-x-4">
+              <label class="nui-text-800 text-sm font-semibold"
+                >Hide Person</label
+              >
               <label class="nui-switch">
                 <input v-model="editingPerson.hidden" type="checkbox" />
                 <span class="nui-control"></span>
               </label>
-              <label class="nui-text-800">Hide this Person?</label>
             </fieldset>
           </div>
-          <footer class="nui-toolbar space-x-4 justify-end">
+          <hr class="nui-divider" />
+          <footer class="nui-toolbar space-x-4 py-2 nui-stiff">
             <button
               @click="editingPerson = undefined"
-              class="nui-button nui-text-500"
+              class="w-full lg nui-button nui-text-500"
             >
               Cancel
             </button>
             <button
               @click="savePerson(editingPerson)"
-              class="nui-button primary solid"
+              class="w-full nui-button primary lg solid"
             >
               Save
             </button>
@@ -335,12 +356,13 @@
 
       <div class="min-h-screen flex flex-col pt-6 px-4 space-y-4">
         <section class="nui-card" v-if="birthdayArray.length">
-          <header class="nui-toolbar">
-            <h1 class="nui-title text-600 text-sm nui-filler">
-              Birthdays Today!
-            </h1>
+          <header class="rounded-t-lg nui-toolbar space-x-2 text-sm shadow-lg">
             <span>🎉</span>
+            <h1 class="nui-title nui-filler text-sm text-indigo-500">
+              Today's Birthdays
+            </h1>
           </header>
+
           <div class="nui-list" v-for="person in birthdayArray">
             <hr class="nui-divider" />
             <person-item
@@ -351,12 +373,13 @@
         </section>
 
         <section class="nui-card" v-if="needsAttention.length">
-          <header class="nui-toolbar space-x-2 text-sm">
-            <h1 class="nui-title text-600 text-sm nui-filler">
+          <header class="rounded-t-lg nui-toolbar space-x-2 text-sm shadow-lg">
+            <span class="text-red-500">⚠️</span>
+            <h1 class="nui-title nui-filler text-sm text-red-500">
               Needs Attention
             </h1>
-            <span class="text-orange-500">⚠️</span>
           </header>
+
           <div v-for="person in needsAttention">
             <hr class="nui-divider" />
             <person-item
@@ -367,9 +390,15 @@
         </section>
 
         <section class="nui-card">
-          <header class="nui-toolbar space-x-2 text-sm">
-            <h1 class="nui-title text-600 text-sm">My People</h1>
+          <header class="rounded-t-lg nui-toolbar space-x-2 text-sm shadow-lg">
+            <h1 class="nui-title text-sm text-gray-500">My People</h1>
           </header>
+          <div
+            class="leading-tight text-center p-4 text-sm"
+            v-if="!everyoneElse.length"
+          >
+            No important people found. <br />You should add some!
+          </div>
           <div v-for="person in everyoneElse">
             <hr class="nui-divider" />
             <person-item
@@ -380,7 +409,7 @@
         </section>
       </div>
       <footer class="nui-bg-glass nui-toolbar sticky space-x-2 bottom-0">
-        <h2 class="nui-title solid">My People</h2>
+        <h2>My People</h2>
         <button
           class="nui-button nui-text-2xl nui-text-inverse"
           @click="selectPersonTrackable()"
